--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,16 @@
     "declaration": false,
     "strictNullChecks": true,
     "sourceMap": true,
-    "types": ["vite/client"],
+    "types": [
+      "vite/client"
+    ],
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "lib": ["ESNext", "DOM"],
+    "lib": [
+      "ESNext",
+      "DOM"
+    ],
     "moduleResolution": "Node",
     "strict": true,
     "resolveJsonModule": true,
@@ -19,7 +24,9 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "skipLibCheck": true,
-    "noImplicitAny": true,
+    "noImplicitAny": true
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
