--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "1.0.0",
   "description": "Messenger app",
   "main": "index.js",
-  "type": "module",
   "engines": {
     "node": "18.18.2"
   },
   "scripts": {
     "start": "vite build && npm run build:server && npm run serve",
     "build": "vite build",
-    "build:server": "tsc src/server.ts --target esnext --moduleResolution node --esModuleInterop --outDir dist",
+    "build:server": "tsc src/server.ts --esModuleInterop --outDir dist",
     "preview": "vite preview",
     "dev": "vite",
     "serve": "node dist/server.js",
@@ -27,7 +26,7 @@
     "@typescript-eslint/parser": "^6.13.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.54.0",
-    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
     "postcss-mixins": "^9.0.4",
     "postcss-nested": "^6.0.1",
     "postcss-simple-vars": "^7.0.1",
