--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "serve": "node dist/server.js",
     "lint:typescript": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts}\" && stylelint \"**/*.pcss\"",
-    "lint:fix": "eslint . --fix && stylelint \"**/*.pcss\" --fix"
+    "lint:fix": "eslint \"**/*.{js,ts}\" --fix && stylelint \"**/*.pcss\" --fix"
   },
   "keywords": [],
   "author": "",
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "handlebars": "^4.7.8"
+    "handlebars": "^4.7.8",
+    "nanoid": "^5.0.4"
   }
 }
