--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -4,31 +4,21 @@
     "declaration": false,
     "strictNullChecks": true,
     "sourceMap": true,
-    "types": [
-      "vite/client",
-      "mocha"
-    ],
     "target": "ESNext",
     "useDefineForClassFields": true,
-    "module": "ESNext",
-    "lib": [
-      "ESNext",
-      "DOM"
-    ],
-    "moduleResolution": "Node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "strict": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "esModuleInterop": true,
-    "noEmit": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "skipLibCheck": true,
     "noImplicitAny": true,
-    "allowImportingTsExtensions": true
   },
-  "include": [
-    "src"
+  "files": [
+    "src/server.cts"
   ]
 }
