--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
     "postcss-simple-vars": "^7.0.1",
     "sinon": "^17.0.1",
     "stylelint": "^15.11.0",
-    "ts-node": "^10.9.2",
     "typescript": "^5.3.2",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "create-esm-loader": "^0.2.5"
   },
   "dependencies": {
     "express": "^4.18.2",
